# research-proposal-generator

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
assets/: proposal.tex
src/: preprocess.py  render.py
